landing, login init.

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="ie ie8 lt-ie9"               lang="en"> <![endif]-->
-<!--[if IE 9]>    <html class="ie ie9"                      lang="en"> <![endif]-->
-<!--[if !IE]><!-->
 <html lang="en" class="no-ie">
-<!--<![endif]-->
-
 <head>
-   <!-- Meta-->
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
    <meta name="description" content="">
@@ -66,11 +58,11 @@
                      <div class="checkbox c-checkbox pull-left mt0">
                         <label>
                            <input type="checkbox" value="">
-                           <span class="fa fa-check"></span>I agree with the <a href="#">terms</a>
+                           <span class="fa fa-check"></span>I agree with the <a href="#" style="color: #0094cb;">terms</a>
                         </label>
                      </div>
                   </div>
-                  <button type="submit" class="btn btn-block btn-success">Register</button>
+                  <button type="submit" class="btn btn-block btn-green" style="margin-top: 20px; margin-bottom: 10px;">Register</button>
                </form>
             </div>
          </div>
