security,setting init

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -7,19 +7,14 @@
    <meta name="keywords" content="">
    <meta name="author" content="">
    <title>Wintermin - Bootstrap Admin Theme</title>
-   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!--[if lt IE 9]><script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
-   <!-- Bootstrap CSS-->
+   
    <link rel="stylesheet" href="../app/css/bootstrap.css">
-   <!-- Vendor CSS-->
    <link rel="stylesheet" href="../vendor/fontawesome/css/font-awesome.min.css">
    <link rel="stylesheet" href="../vendor/animo/animate+animo.css">
-   <!-- App CSS-->
    <link rel="stylesheet" href="../app/css/app.css">
    <link rel="stylesheet" href="../app/css/common.css">
-   <!-- Modernizr JS Script-->
+   <link rel="stylesheet" href="../app/css/global.css">
    <script src="../vendor/modernizr/modernizr.js" type="application/javascript"></script>
-   <!-- FastClick for mobiles-->
    <script src="../vendor/fastclick/fastclick.js" type="application/javascript"></script>
 </head>
 
